# locals

./: .gitignore  Cargo.toml  README.md  SECURITY.md
.github/workflows/: rust.yml  rust2.yml
src/: chat.rs  main.rs
src/chat/: save.rs
