[package]
name = "localsd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
futures = "0.3.30"
tracing = "0.1.40"
libp2p = { version = "0.54.1", features = [ "tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic"] }
uuid = { version = "1.10.0", features = ["v8"] }
rusqlite = { version = "0.32.1", features = ["sqlcipher"] }
sha3-rust = "0.1.1"
log = "0.4.22"
