[package]
name = "localsd"
version = "0.1.0"
edition = "2021"
license = "GPL-3"
publish = false

[package.metadata.release]
release = false

[dependencies]
tokio = { version = "1.44.0", features = ["full"]}
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
futures = "0.3.31"
libp2p = { version = "0.55.0", features = [ "tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic"] }
rusqlite = { version = "0.33.0", features = ["sqlcipher"] }
sha3-rust = "0.1.1"